syntax = "proto2";

package ComprehensiveTest.EdgeCasesMinimal;

option java_package = "com.rubberjam.protobuf.compiler.test.edge";
option java_outer_classname = "ComprehensiveTestEdgeCasesMinimal";
option optimize_for = SPEED;

// Message with field number edge cases
message EdgeCaseMinimal {

  optional string empty_string = 17 [default = ""];
  optional string unicode_string = 18;


  // Field numbers at boundaries
  optional int32 field15 = 15;
  optional int32 field16 = 16;
  optional int32 field2047 = 2047;
  optional int32 field2048 = 2048;
}

