syntax = "proto2";

package ComprehensiveTest.NestedMinimal;

option java_package = "com.rubberjam.protobuf.compiler.test.nested";
option java_outer_classname = "ComprehensiveTestNestedMinimal";
option java_multiple_files = false;
option optimize_for = SPEED;

// Deeply nested messages
message Level1 {
  optional string level1_field = 1;
  
  message Level2 {
    optional string level2_field = 1;
    
    message Level3 {
      optional string level3_field = 1;
      
      message Level4 {
        optional string level4_field = 1;
        
        enum Level4Enum {
          LEVEL4_UNKNOWN = 0;
          LEVEL4_FIRST = 1;
        }
        optional Level4Enum level4_enum = 2;
      }
      
      optional Level4 level4_message = 2;
      repeated Level4 repeated_level4 = 3;
    }
    
    optional Level3 level3_message = 2;
    repeated Level3 repeated_level3 = 3;
    
  }
  
  optional Level2 level2_message = 2;


}



